# codex-card

./: .gitignore  .justfile  .pre-commit-config.yaml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
scripts/: update.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
