[package]
name = "codex-card"
version = "0.1.0"
description = "A minimalist floating widget for Codex subscription usage"
authors = ["Codex Card contributors"]
edition = "2024"

[lib]
name = "codex_card_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
