[package]
name = "codex-card"
version = "0.1.2"
description = "A minimalist floating widget for Codex subscription usage"
authors = [ "Codex Card contributors",]
edition = "2024"

[lib]
name = "codex_card_lib"
crate-type = [ "staticlib", "cdylib", "rlib",]

[dependencies]
dirs = "6"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "json", "rustls-tls",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.tauri]
version = "2"
features = []

[build-dependencies.tauri-build]
version = "2"
features = []
